Fix various small issues with storage refactor